fix surprise hr color not showing bug

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -86,7 +86,7 @@ hr {
   border: 0;
   margin: 1em 0;
   padding: 0; */
-  border-color: 2px solid var(--surprise);
+  border-top: 2px solid var(--surprise);
 }
 #status.anger a{
   color: var(--anger);
